--- a/src/main/resources/templates/productByBelowValueView.html
+++ b/src/main/resources/templates/productByBelowValueView.html
@@ -3,15 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Product by ID View</title>
+    <title>Product by below value View</title>
 </head>
 <body>
+    <h1>Product by below value View</h1>
     <table>
         <tr th:each="produto: ${produto}">
-        <td th:text="${produto.codigo}" />
-        <td th:text="${produto.nome}" />
-        <td th:text="${produto.estoque}" />
-        <td th:text="${produto.valor}" />
+        <td th:text="${produto?.codigo}" />
+        <td th:text="${produto?.nome}" />
+        <td th:text="${produto?.estoque}" />
+        <td th:text="${produto?.valor}" />
     </tr>
     </table>
 </body>
