--- a/src/main/resources/templates/productByIdView.html
+++ b/src/main/resources/templates/productByIdView.html
@@ -6,13 +6,15 @@
     <title>Product by ID View</title>
 </head>
 <body>
-    <table>
-        <tr th:each="produto: ${produto}">
-        <td th:text="${produto.codigo}" />
-        <td th:text="${produto.nome}" />
-        <td th:text="${produto.estoque}" />
-        <td th:text="${produto.valor}" />
-    </tr>
-    </table>
+    <h1>Product by ID View</h1>
+    <div th:if="${produto}">
+        <p th:text="${produto?.codigo}"></p>
+        <p th:text="${produto?.nome}"></p>
+        <p th:text="${produto?.estoque}"></p>
+        <p th:text="${produto?.valor}">
+    </div>
+    <div th:unless="${produto}">
+        <div>ERROR: INVALID PRODUCT</div>
+    </div>
 </body>
 </html>
